Project

General

Profile

Actions

Bug #36662

closed

beast frontend fails to parse ipv6 endpoints

Added by Casey Bodley over 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
beast ipv6
Backport:
luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-10-31 14:16:21.200 7f6166804440  0 starting handler: beast
2018-10-31 14:16:21.200 7f6166804440 -1 failed to parse endpoint=[::1]:8000
2018-10-31 14:16:21.200 7f6166804440 -1 ERROR: failed initializing frontend

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #36733: luminous: beast frontend fails to parse ipv6 endpointsResolvedNathan CutlerActions
Copied to rgw - Backport #36734: mimic: beast frontend fails to parse ipv6 endpointsResolvedJonathan BrielmaierActions
Actions #1

Updated by Casey Bodley over 5 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Casey Bodley over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Casey Bodley over 5 years ago

  • Copied to Backport #36733: luminous: beast frontend fails to parse ipv6 endpoints added
Actions #4

Updated by Casey Bodley over 5 years ago

  • Copied to Backport #36734: mimic: beast frontend fails to parse ipv6 endpoints added
Actions #5

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF